# Cpp-Learning-Archive

./: .gitignore  LICENSE  README.md
DiscoveringModernCpp/: CMakeLists.txt  README.md
DiscoveringModernCpp/CMake_example/: CMakeLists.txt  fluxer.cpp  mesher.cpp  mesher.hpp  solver.cpp  solver.hpp
DiscoveringModernCpp/c++03/: CMakeLists.txt  bool_stuff.cpp  cursor_test.cpp  exception_example.cpp  expression_template_example.cpp  expression_template_example2.cpp  formatting.cpp  inline_example.cpp  interoperable.cpp  interoperable.h  interoperable_main.c  is_gcc_bug.cpp  makefile  oop_virtual.cpp  poisson.cpp  release_98_test.cpp  undefined.cpp  up_down_cast_example.cpp  vector_expression_test.cpp  vector_test.cpp  vector_unroll_debug2.cpp  vector_unroll_example2.cpp  vector_unroll_example_timer.cpp  vector_unroll_test.cpp  vector_unroll_test2.cpp
DiscoveringModernCpp/c++11/: CMakeLists.txt  accumulate_functor_example.cpp  advance_test.cpp  argc_argv_test.cpp  async_example.cpp  async_is_prime_example.cpp  atomic_counter.cpp  black_scholes.cpp  call_once_example.cpp  chrono_example.cpp  conversion_operator.cpp  delete_free_functions.cpp  deleted_destructor.cpp  derivative.cpp  enable_if_class.cpp  expression_template_example.cpp  expression_template_example2.cpp  find_test.cpp  find_test2.cpp  fsize_unroll_example.cpp  fsize_unroll_test.cpp  fsize_vector.cpp  function_example.cpp  function_style_cast.cpp  growing_test.cpp  how_constant_example.cpp  initializer_list_test.cpp  lambda.cpp  lock_free_stack.cpp  lookup_short.cpp  makefile  map_test.cpp  matrix_access_example.cpp  matrix_unroll_example.cpp  namespace_trouble.cpp  nested_exception.cpp  numeric_test.cpp  oop_abstract.cpp  oop_multi0.cpp  oop_multi1.cpp  (+31 more)
DiscoveringModernCpp/c++14/: CMakeLists.txt  Makefile  abs_functor.cpp  array_lock_guard.cpp  auto_decltype.cpp  constexpr_example.cpp  constexpr_traits.cpp  expression_template_example.cpp  is_prime.cpp  modern_derivatives_by_alex.cpp  modern_derivatives_by_peter.cpp  popcount.cpp  standard_literals.cpp  template_variable_example.cpp  type_traits_example.cpp
DiscoveringModernCpp/c++17/: CMakeLists.txt  Makefile  any_example.cpp  auto_template_argument.cpp  class_type_deduction.cpp  class_type_deduction_fail.cpp  constexpr_lambda.cpp  deleted_move_test.cpp  empty.cpp  fallthrough_example.cpp  filesystem_example.cpp  folding_example.cpp  fsize_unroll_test.cpp  has_include_test.cpp  hex_floats.cpp  if_init.cpp  matrix_unroll_example.cpp  matrix_unroll_simplified_example.cpp  maybe_unused_example.cpp  modern_derivatives_by_alex.cpp  modern_derivatives_by_peter.cpp  move_sanity_test.cpp  nodiscard_example.cpp  optional_example.cpp  parallel_reduce.cpp  parallel_sort.cpp  parallel_stl.cpp  reduction_unroll_array_example.cpp  reduction_unroll_example.cpp  reduction_unroll_nesting_example.cpp  reduction_unroll_registers_example.cpp  string_view2.cpp  string_view_example.cpp  structured_bindings.cpp  structured_bindings_user.cpp  variadic_call.cpp  variant_example.cpp  variant_example_nerdy.cpp  vector_any.cpp  vector_unroll_example.cpp  (+1 more)
DiscoveringModernCpp/c++20/: CMakeLists.txt  algebraic_concepts.cpp  algebraic_concepts_experiments.cpp  auto_parameters.cpp  concept_accumulate_semantic.cpp  concept_accumulate_syntactic.cpp  concept_dispatching.cpp  concept_junk.cpp  concept_with_or.cpp  consteval_example.cpp  constinit_example.cpp  coroutine-generator.cpp  format_example.cpp  math_constants_examples.cpp  ranges_copy.cpp  ranges_enumerate_example.cpp  ranges_examples.cpp  ranges_filter_example.cpp  ranges_iota.cpp  ranges_niebler.cpp  ranges_unique_example.cpp  space_ship_example.cpp  sync_stream_example.cpp  vector_constraint_initialization.cpp  vector_formatted_output.cpp
DiscoveringModernCpp/c++20vs/: c++20vs.sln
DiscoveringModernCpp/c++20vs/coroutine-generator/: coroutine-generator.cpp  coroutine-generator.vcxproj  coroutine-generator.vcxproj.filters
DiscoveringModernCpp/c++20vs/module_test/: math.IXX  module_test.cpp  module_test.vcxproj  module_test.vcxproj.filters
DiscoveringModernCpp/c++20vs/vector_module/: vector.IXX  vector_module.cpp  vector_module.vcxproj  vector_module.vcxproj.filters
DiscoveringModernCpp/makefile_example/: fluxer.cpp  makefile  mesher.cpp  mesher.hpp  solver.cpp  solver.hpp
DiscoveringModernCpp/modules/: Makefile  dmc_modules.map  math.cpp  math.cppm  math_app.cpp  math_extra.cppm  vector.cppm  vector.hpp  vector_from_generated_module.cpp  vector_from_module.cpp
DiscoveringModernCpp/tools/book_example/: book_example.cpp  book_example.desktop
a-tour-of-cpp/04-classes/class-design-code-hints/: 1-const-member-functions.cpp  2-problem-when-returning-handles-to-object-internals.cpp  3-solution-to-return-handles-to-object-internals.cpp  4-const-overloading-operators-problem1.cpp  5-const-overloading-operators-problem2.cpp  6-const-overloading-operators-problem3.cpp  7-const-overloading-operators-problem4.cpp  8-const-overloading-operators-solution1.cpp  CMakeLists.txt
a-tour-of-cpp/04-classes/vector-example/: CMakeLists.txt  container.h  list_container.cpp  list_container.h  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  vector.cpp  vector.h  vector_container.cpp  vector_container.h
a-tour-of-cpp/05-essential-operations/: 1-implicit-copy-assigment.cpp  2-explicit-conversions.cpp  3-copy-constructor-copy-assignment.cpp  4-overcopying-containers.cpp  5-move-constructor-move-assignment.cpp  6-defaulted-and-deleted-methods.cpp  7-defaulted-and-deleted-methods.cpp  8-defaulted-and-deleted-methods.cpp  CMakeLists.txt
a-tour-of-cpp/06-templates/5-template-examples/: 01-value-template-arguments.cpp  02-function-templates.cpp  03-generic-accumulate-example.cpp  04-functors.cpp  05-functors-with-STL.cpp  06-lambda-functions.cpp  07-lambda-functions.cpp  08-lambda-functions.cpp  CMakeLists.txt  (+6 more)
a-tour-of-cpp/12-algorithms/: 01-sort.cpp  02-sort.cpp  03-find.cpp  04-iterators.cpp  05-iterators.cpp  06-iterators.md  07-useful-algorithms-and-operations.md  08-container-algorithms.cpp  09-parallel-algorithms.md  CMakeLists.txt
(+1039 files in other folders)
