cmake_minimum_required(VERSION 3.14)
project(12_algorithms)

set(CMAKE_CXX_STANDARD 14)

add_executable(01-sort 01-sort.cpp)
add_executable(02-sort 02-sort.cpp)
add_executable(03-find 03-find.cpp)
add_executable(04-iterators 04-iterators.cpp)
add_executable(05-iterators 05-iterators.cpp)
add_executable(08-container-algorithms 08-container-algorithms.cpp)
